--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ target/
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+node-backend/node_modules/
 
 # RustRover
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
