--- a/dev-backend/Cargo.toml
+++ b/dev-backend/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sqlx = {version="0.8.3"}
+sqlx = {version="0.8.3", features = [ "mysql", "runtime-tokio", "tls-native-tls" ]}
 tokio = {version="1"}
 actix-web = "4.0"
 actix-rt = "2.5"
