--- a/.github/workflows/rust-backend.yml
+++ b/.github/workflows/rust-backend.yml
@@ -17,10 +17,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
-    - name: Build
+    - name: Build (Offline Mode)
       run: | 
         cd dev-backend
-        cargo build --verbose
+        cargo build --offline --verbose
         
     - name: Run tests
       run: |
