--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -20,10 +20,12 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "prisma-client": "^0.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "typescript": "^5.8.2"
   }
 }
