--- a/node-backend/package.json
+++ b/node-backend/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^6.5.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
@@ -20,8 +21,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.10.0",
-    "prisma": "^6.5.0",
-    "prisma-client": "^0.0.0"
+    "prisma": "^6.5.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9",
